--- a/css/styles.css
+++ b/css/styles.css
@@ -620,12 +620,24 @@ nav ul .name-logo
 
 #game div div div div
 {
+    display: flex;
+    flex-direction: column;
+    gap: var(--dimen-medium);
+    background-color: var(--secondary);
+    padding: var(--dimen-small) var(--dimen-medium);
+}
+
+#game div div:nth-of-type(2) div div
+{
     display: grid;
     grid-template-columns: 100%;
     grid-template-rows: 1fr 1fr;
-    background-color: var(--secondary);
-    padding: var(--dimen-small) var(--dimen-medium);
     gap: var(--dimen-medium);
+}
+
+#game img
+{
+    width: 100px;
 }
 
 main .container
@@ -832,6 +844,8 @@ main button
 
 .pop-up
 {
+    display: none;
+    text-align: center;
     position: absolute;
     transform: translate(-50%, -50%);
     z-index: 3;
@@ -839,13 +853,14 @@ main button
     top: 50%;
     max-width: 250px;
     min-width: 200px;
+    min-height: 120px;
     font-size: small;
     padding: var(--dimen-xsmall) var(--dimen-medium);
+    padding-top: var(--dimen-xlarge);
     color: var(--four);
     background-color: var(--primary);
     border-radius: var(--border-radius-medium-form);
-    text-align: justify;
-    display: none;
+    border: 1px solid var(--four);
 }
 
 main .container
@@ -856,7 +871,7 @@ main .container
 .pop-up h3
 {
     display: flex;
-    justify-content: space-between;
+    gap: var(--dimen-medium);
     color: var(--four);
 }
 
@@ -900,11 +915,6 @@ main .container
     .pop-up
     {
         font-size: medium;
-    }
-
-    main .container .section-images
-    {
-        max-width: 450px;
     }
 
     main
@@ -993,6 +1003,14 @@ main .container
     {
         padding-inline: var(--dimen-large);
     }
+
+    main section #game
+    {
+        display: flex;
+        flex-direction: row;
+        gap: var(--dimen-large);
+    }
+
     main section #part-one
     {
         grid-column: 1 / span 2;
