--- a/css/styles.css
+++ b/css/styles.css
@@ -1,5 +1,6 @@
 @charset "UTF-8";
-/* load reset rules first and mixins */ /*! normalize.css v8.0.0 | MIT License | github.com/necolas/normalize.css */
+/* load reset rules first and mixins */
+/*! normalize.css v8.0.0 | MIT License | github.com/necolas/normalize.css */
 /* Document
    ========================================================================== */
 /**
@@ -412,11 +413,67 @@ h1, h2, h3, h4, h5, h6 {
   border-radius: 50%;
 }
 
+main {
+  padding-bottom: var(--dimen-large);
+  padding-top: var(--dimen-xlarge);
+  background-color: var(--four);
+  /* Change default icon ul list */
+}
+main a {
+  color: var(--primary);
+  text-decoration: underline;
+}
+main h1, main h3 {
+  color: var(--primary);
+  font-weight: 600;
+}
+main article .article-content {
+  padding: var(--dimen-medium);
+}
+main section {
+  display: flex;
+  flex-direction: column;
+  gap: var(--dimen-small);
+  margin-inline: auto;
+}
+main section .items {
+  position: relative;
+  display: grid;
+  grid-template: auto/auto;
+  grid-template-columns: repeat(auto-fit, minmax(var(--items-img-size-px), 1fr));
+  margin-block: var(--dimen-medium);
+  gap: var(--dimen-small);
+}
+main section .sub-header img {
+  margin-top: var(--dimen-medium);
+}
+main section .sub-header .user-name {
+  margin-left: var(--dimen-medium);
+  margin-top: var(--dimen-xxlarge);
+}
+main section .sub-header h1 {
+  margin-top: var(--dimen-small);
+}
+main section article {
+  padding: var(--dimen-medium) var(--dimen-medium);
+  display: flex;
+  flex-direction: column;
+}
+main section article ul {
+  margin-block: var(--dimen-medium);
+}
+main section article p {
+  margin-block: var(--dimen-small);
+}
+main .container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
 main img {
   width: 100%;
   height: auto;
 }
-
 main .sub-header img {
   position: relative;
   left: 20px;
@@ -424,6 +481,88 @@ main .sub-header img {
   height: 152px;
   width: 152px;
   border-radius: 50%;
+}
+main .sub-header p {
+  font-weight: 300;
+  font-size: 1.2em;
+}
+main .topic p, main section article ul, main section p {
+  text-align: justify;
+}
+main a:hover {
+  font-weight: bold;
+}
+main ul li {
+  display: flex;
+  align-items: center;
+  gap: var(--dimen-xsmall);
+  overflow: hidden;
+}
+main ul li::before {
+  content: "";
+  display: block;
+  background-image: url("../images/ic_start.svg");
+  background-position: center center;
+  background-repeat: no-repeat;
+  background-size: 14px 14px;
+  min-width: 14px;
+  height: 14px;
+}
+
+.forms .input-label-group div input {
+  border-right-width: 0px !important;
+}
+.forms .input-label-group div button {
+  border-top-left-radius: 0px;
+  border-bottom-left-radius: 0px;
+}
+.forms p {
+  margin-block: var(--dimen-small);
+}
+
+nav {
+  background-color: var(--secondary);
+}
+nav h1 {
+  color: var(--four);
+}
+nav .cart {
+  color: var(--primary);
+}
+nav ul {
+  margin-block: var(--dimen-small);
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-evenly;
+  list-style: none;
+}
+nav ul li h1 {
+  font-size: var(--dimen-medium);
+}
+nav ul li a {
+  padding-inline: var(--dimen-small);
+  padding-block: var(--dimen-medium);
+  color: var(--third);
+  display: block;
+}
+nav ul li a:hover {
+  background-color: var(--six);
+  text-decoration: none;
+}
+nav ul .dropdown-content a {
+  padding-inline: var(--dimen-medium);
+}
+nav ul .name-logo {
+  width: 100%;
+}
+nav ul .name-logo a {
+  padding: 0px;
+}
+nav .name-logo, nav .right-nav, nav .side-content {
+  display: flex;
+  flex-wrap: wrap;
+  align-items: center;
+  justify-content: center;
 }
 
 .img-background {
@@ -463,54 +602,15 @@ ol li::marker {
   font-weight: bold;
 }
 
-/* Change default icon ul list */
-main ul li {
-  display: flex;
-  align-items: center;
-  gap: var(--dimen-xsmall);
-  overflow: hidden;
-}
-
-main ul li::before {
-  content: "";
-  display: block;
-  background-image: url("../images/ic_start.svg");
-  background-position: center center;
-  background-repeat: no-repeat;
-  background-size: 14px 14px;
-  min-width: 14px;
-  height: 14px;
-}
-
 /* Fonts */
-nav ul li h1 {
-  font-size: var(--dimen-medium);
-}
-
-main .sub-header p {
-  font-size: 1.2em;
-}
-
 .copyright {
   font-size: small;
   font-style: italic;
 }
 
-main .sub-header p {
-  font-weight: 300;
-}
-
 /* Text styles */
 header, nav, footer, .copyright, h3 {
   text-align: center;
-}
-
-main .topic p, main section article ul, main section p {
-  text-align: justify;
-}
-
-main a:hover {
-  font-weight: bold;
 }
 
 /* Margin */
@@ -530,70 +630,15 @@ header span, footer span, nav ul .name-logo h1 {
   margin-left: var(--dimen-small);
 }
 
-main section .sub-header img {
-  margin-top: var(--dimen-medium);
-}
-
-main section .sub-header .user-name {
-  margin-left: var(--dimen-medium);
-  margin-top: var(--dimen-xxlarge);
-}
-
-main section .sub-header h1 {
-  margin-top: var(--dimen-small);
-}
-
-main section article ul {
-  margin-block: var(--dimen-medium);
-}
-
-main section article p {
-  margin-block: var(--dimen-small);
-}
-
-main {
-  padding-bottom: var(--dimen-large);
-}
-
-nav ul, main .forms p {
-  margin-block: var(--dimen-small);
-}
-
 /* Padding */
-main {
-  padding-top: var(--dimen-xlarge);
-}
-
 section {
   padding: 0px var(--dimen-medium);
-  width: -webkit-fit-content;
   width: -moz-fit-content;
   width: fit-content;
 }
 
 footer .footer-column, header {
   padding-block: var(--dimen-medium);
-}
-
-main article .article-content {
-  padding: var(--dimen-medium);
-}
-
-main section article {
-  padding: var(--dimen-medium) var(--dimen-medium);
-}
-
-nav ul li a {
-  padding-inline: var(--dimen-small);
-  padding-block: var(--dimen-medium);
-}
-
-nav ul .dropdown-content a {
-  padding-inline: var(--dimen-medium);
-}
-
-nav ul .name-logo a {
-  padding: 0px;
 }
 
 footer {
@@ -614,39 +659,9 @@ header, footer {
   color: var(--four);
 }
 
-nav {
-  background-color: var(--secondary);
-}
-
-nav h1 {
-  color: var(--four);
-}
-
-nav .cart {
-  color: var(--primary);
-}
-
-main {
-  background-color: var(--four);
-}
-
-main h1, main h3, h4, h5, h6 {
+h4, h5, h6 {
   color: var(--primary);
   font-weight: 600;
-}
-
-nav ul li a {
-  color: var(--third);
-}
-
-nav ul li a:hover {
-  background-color: var(--six);
-  text-decoration: none;
-}
-
-main a {
-  color: var(--primary);
-  text-decoration: underline;
 }
 
 .copyright {
@@ -697,15 +712,6 @@ main .forms .input-radio-group {
 .error-field {
   border-color: var(--error) !important;
   border-width: 2px !important;
-}
-
-.forms .input-label-group div input {
-  border-right-width: 0px !important;
-}
-
-.forms .input-label-group div button {
-  border-top-left-radius: 0px;
-  border-bottom-left-radius: 0px;
 }
 
 /* blockquote */
@@ -779,59 +785,44 @@ footer .social-media {
   gap: var(--dimen-medium);
 }
 
-/* nav */
-nav ul li a {
-  display: block;
-}
-
-nav ul {
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: space-evenly;
-  list-style: none;
-}
-
-nav .name-logo, nav .right-nav, nav .side-content {
-  display: flex;
-  flex-wrap: wrap;
-  align-items: center;
-  justify-content: center;
-}
-
-nav ul .name-logo {
-  width: 100%;
-}
-
 /* main */
-#game, #game p {
+#game {
   text-align: center;
 }
-
-#game h4, h5, h6 {
+#game img {
+  width: 100px;
+}
+#game p {
+  text-align: center;
+}
+#game h4, #game h5, #game h6 {
   margin: 0px;
 }
-
-#game #player, #game #opponent {
+#game #player {
   display: flex;
   flex-direction: column;
   gap: var(--dimen-large);
   justify-content: center;
   padding-top: var(--dimen-medium);
 }
-
+#game #opponent {
+  display: flex;
+  flex-direction: column;
+  gap: var(--dimen-large);
+  justify-content: center;
+  padding-top: var(--dimen-medium);
+}
 #game div div h5 {
   background-color: var(--primary);
   color: var(--four);
   padding: var(--dimen-small) var(--dimen-medium);
   margin: 0px;
 }
-
 #game div div div {
   display: flex;
   flex-direction: row;
   width: 100%;
 }
-
 #game div div div div {
   display: flex;
   flex-direction: column;
@@ -839,22 +830,11 @@ nav ul .name-logo {
   background-color: var(--secondary);
   padding: var(--dimen-small) var(--dimen-medium);
 }
-
 #game div div:nth-of-type(2) div div {
   display: grid;
   grid-template-columns: 100%;
   grid-template-rows: 1fr 1fr;
   gap: var(--dimen-medium);
-}
-
-#game img {
-  width: 100px;
-}
-
-main .container {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
 }
 
 .disable {
@@ -869,27 +849,6 @@ main .container {
 
 .active-image {
   border-bottom: 2px solid var(--error) !important;
-}
-
-main section {
-  display: flex;
-  flex-direction: column;
-  gap: var(--dimen-small);
-  margin-inline: auto;
-}
-
-main section .items {
-  position: relative;
-  display: grid;
-  grid-template: auto/auto;
-  grid-template-columns: repeat(auto-fit, minmax(var(--items-img-size-px), 1fr));
-  margin-block: var(--dimen-medium);
-  gap: var(--dimen-small);
-}
-
-main section article {
-  display: flex;
-  flex-direction: column;
 }
 
 .player-name {
@@ -1099,7 +1058,6 @@ main .container {
     flex-direction: row;
     gap: var(--dimen-large);
     justify-content: center;
-    height: -webkit-fit-content;
     height: -moz-fit-content;
     height: fit-content;
   }
